support for most types